--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     name: Build Docker Images
     runs-on: ubuntu-latest
     steps:
-        uses: actions/checkout@v1
+        run: actions/checkout@v1
       - name: Add environment variables to .env
         run: |
           echo DEBUG=0 >> .env
