--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
 
     - name: Build images
       run: |
-        docker-compose -f docker-compose.ci.yml build
+        docker-compose -f docker-compose.yml build
 
     - name: Push images
       run: |
