--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,16 +16,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Add environment variables to .env
+    - name: Add environment variables to .env.dev
       run: |
         echo DEBUG=0 >> .env
-        echo SQL_ENGINE=django.db.backends.postgresql >> .env
-        echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
-        echo POSTGRES_DB=${{ secrets.POSTGRES_DB }} >> .env
-        echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-        echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-        echo POSTGRES_HOST=${{ secrets.POSTGRES_HOST }} >> .env
-        echo POSTGRES_PORT=${{ secrets.POSTGRES_PORT }} >> .env
+        echo SQL_ENGINE=django.db.backends.postgresql >> .env.dev
+        echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env.dev
+        echo POSTGRES_DB=${{ secrets.POSTGRES_DB }} >> .env.dev
+        echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env.dev
+        echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env.dev
+        echo POSTGRES_HOST=${{ secrets.POSTGRES_HOST }} >> .env.dev
+        echo POSTGRES_PORT=${{ secrets.POSTGRES_PORT }} >> .env.dev
 
     - name: Set environment variables
       run: |
