--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - 8000:8000
       - 3000:3000
     env_file:
-      - .env.dev
+      - ./.env.dev
     depends_on:
       - db
       - redis
@@ -37,7 +37,7 @@ services:
     volumes:
       - ./app/:/usr/src/app/
     env_file:
-      - .env.dev
+      - ./.env.dev
     command: celery -A core worker --loglevel=info
     links:
       - redis
@@ -51,7 +51,7 @@ services:
     volumes:
       - ./app/:/usr/src/app/
     env_file:
-      - .env.dev
+      - ./.env.dev
     command: celery -A core flower --port=5555 # web UI will be available on http://localhost:5555
     links:
       - redis
