--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,8 @@ jobs:
 
     - name: Push images
       run: |
-        docker push ${{ env.dev.WEB_IMAGE }}
+        docker push ${{ env.dev.WEB_IMAGE }}:latest
+        docker push ${{ env.dev.NGINX_IMAGE }}:latest
 
 
 #jobs:
