--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     build:
       context: ./
       dockerfile: ./app/Dockerfile
+      cache_from:
+        - "${WEB_IMAGE}"
+    image: "${WEB_IMAGE}"
     command: python manage.py runserver 0.0.0.0:8000
     restart: unless-stopped
     volumes:
