--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Docker meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with:
+          images: ghcr.io/gbaeke/rgapi
+          tag-sha: true
+          tag-edge: false
+          tag-latest: true
+
     - name: Add environment variables to .env.dev
       run: |
         echo DEBUG=0 >> .env.dev
@@ -43,9 +53,16 @@ jobs:
       run: |
         docker-compose -f docker-compose.yml build
 
-    - name: Push images
-      run: |
-        docker push ${{ env.dev.WEB_IMAGE }}
+    - name: Push image
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          file: ./Dockerfile
+
+#    - name: Push images
+#      run: |
+#        docker push ${{ env.dev.WEB_IMAGE }}
 
 
 #  deploy:
