--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 env:
-  WEB_IMAGE: ghcr.io/$(echo $GITHUB_REPOSITORY | tr '[:lower:]' '[:lower:]')/web
+  WEB_IMAGE: ghcr.io/$(echo "bogdanovicmilos" | tr '[:upper:]' '[:lower:]')/web
 
 jobs:
 
